# nest

./: .gitignore  .travis.yml  .zenodo.json  220RnCalib.sh  CITATION.md  CMakeLists.txt  Detector.txt  LICENSE  LUX.hh  NEST.cpp  NEST.hh  NESTConfig.cmake.in  NESTConfigVersion.cmake.in  README.md  README.txt  README_Analysis.txt  README_Detectors.txt  README_Setup.txt  RandomGen.cpp  RandomGen.hh  TestSpectra.cpp  TestSpectra.hh  VDetector.cpp  VDetector.hh  analysis.hh  detector.hh  format.sh  libNEST.cpp  libNEST.hh  makefile  old_NEST.cpp  old_NEST.hh  old_testNEST.cpp  photonTimes.cpp  randomExponential.cpp  rootNEST.cpp  testNEST.cpp  testNEST.hh
Detectors/: DetectorDefinitionExample.hh  DetectorExample_XENON10.hh  VDetector.hh
Documentation/: README_G4.txt  README_Setup.txt  Xe10_ERBand_Luiz.txt
G4integration/: CMakeLists.txt  NESTProc.cc  NESTProc.cpp  NESTProc.hh  NESTStackingAction.cc  NESTStackingAction.cpp  NESTStackingAction.hh
GarfieldppIntegration/: CMakeLists.txt  GenerateGarfieldGasTableForLiquidNoble.cpp
Tools/: LUX_Run03.txt  README.md  bareNEST.cpp  rootNEST.cpp
cmake/: NESTConfig.cmake.in  gcem.cmake
examples/: 220RnCalib.in  220RnCalib.sh  CMakeLists.txt  LArNESTBenchmarks.cpp  LUXRun03_CH3TBand_SpikeFull.txt  LUXRun03_DDBand_SpikeFull.txt  LUXRun03_betaEff_Simulated.txt  LUXRun03_nrEff_Simulated.txt  PulseShape.cpp  Xe10_ERBand_Luiz.txt  Xe10_NRBand_Luiz.txt  bareLArNEST.cpp  bareNEST.cpp  doubleScatter.cpp  efficiency.sh  leakage.sh  legacyLArNEST.cpp  legacyLArNESTBenchmarks.cpp  loopNEST.in  loopNEST.sh  multipleScatter.cpp  pulseShape.cpp  pulseShape_LAr_S1_only.cpp  pulseShape_S1_only.cpp  rootNEST.cpp  tracker.sh
examples/LArNEST/: CMakeLists.txt  LArNESTBenchmarks.cpp  LArNESTFluctuationBenchmarks.cpp  LArNESTMeanYieldsBenchmarks.cpp  LArNESTNeutronCapture.cpp  LegacyLArNESTBenchmarks.cpp
include/: NEST.hh  RandomGen.hh  TestSpectra.hh  analysis.hh  testNEST.hh  xoroshiro.hh
include/Detectors/: ._DS.hh  DS.hh  DetectorExample_XENON10.hh  Detector_G3.hh  EXO200.hh  LArDetector.hh  LUX_Run02.hh  LUX_Run03.hh  LZ_2024.hh  LZ_SR1.hh  LZ_WS2022.hh  LZ_WS2024.hh  VDetector.hh  XENONnT_SR0.hh  Xed_CWRU_Dahl.hh  Z3_FSR_HA.hh
include/NEST/: ._NEST.hh  GammaHandler.hh  LArNEST.hh  LArParameters.hh  NEST.hh  RandomGen.hh  TestLArSpectra.hh  TestSpectra.hh  ValidityTests.hh  analysis.hh  analysis_G2.hh  execNEST.hh  testNEST.hh  xoroshiro.hh
src/: ._NEST.cpp  ._execNEST.cpp  GammaHandler.cpp  LArDetector.cpp  LArNEST.cpp  NEST.cpp  RandomGen.cpp  TestLArSpectra.cpp  TestSpectra.cpp  VDetector.cpp  ValidityTests.cpp  digitized_points.txt  execNEST.cpp  testNEST.cpp
utils/larnest/: benchmarks.py  lar_dataset.py  parameters.py  plot_benchmarks.py  utils.py
utils/larnest/data/: alpha_charge_yield.csv  alpha_light_yield.csv  drift_velocity.csv  er_charge_yield.csv  er_light_yield.csv  lar_data.npz  nr_charge_yield.csv  nr_charge_yield_alt.csv  nr_light_yield.csv  nr_total_yield.csv
