# add_executable(bareLArNEST bareLArNEST.cpp)
# target_link_libraries(bareLArNEST PUBLIC NEST::Core)

add_executable(LegacyLArNESTBenchmarks LegacyLArNESTBenchmarks.cpp)
target_link_libraries(LegacyLArNESTBenchmarks PUBLIC NESTCore)

add_executable(LArNESTMeanYieldsBenchmarks LArNESTMeanYieldsBenchmarks.cpp)
target_link_libraries(LArNESTMeanYieldsBenchmarks PUBLIC NESTCore)

add_executable(LArNESTFluctuationBenchmarks LArNESTFluctuationBenchmarks.cpp)
target_link_libraries(LArNESTFluctuationBenchmarks PUBLIC NESTCore)

add_executable(LArNESTNeutronCapture LArNESTNeutronCapture.cpp)
target_link_libraries(LArNESTNeutronCapture PUBLIC NESTCore)
